move script from home to application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= yield(:title) %> | Bookl</title>
@@ -14,4 +14,8 @@
   <body>
     <%= yield %>
   </body>
-</html> -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="../../dist/js/bootstrap.min.js"></sc
+
+</html>
