--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -13,6 +13,8 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li class="active"><a href="#about">About</a></li>
+        <li><a href="/user_accounts/show">Login</a></li>
+        <li><a href="/user_accounts/new">Sign Up!</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
