--- a/app/views/user_accounts/_form.html.erb
+++ b/app/views/user_accounts/_form.html.erb
@@ -15,6 +15,16 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+  
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :password_confirmation, "Confirmation" %><br>
+    <%= f.password_field :password_confirmation %>
+  </div>
 
   <div class="field">
     <%= f.label :isAdmin? %><br>
