--- a/app/views/user_accounts/new.html.erb
+++ b/app/views/user_accounts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New User Account</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', user_accounts_path %>
+<div class="container">
+	<h1>New User Account</h1>
+	<%= render 'form' %>	
+	<%= link_to 'Back', user_accounts_path %>
+</div>
