--- a/app/views/search/retreive.html.erb
+++ b/app/views/search/retreive.html.erb
@@ -30,6 +30,6 @@
     			<div class="result-title"><%= result.title %></div>
     			<div class="result-author"><%= result.author %></div>
     		</div>
-
+    	<% end %>
     </div>
 </div>
