--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,9 @@
 <p id="notice"><%= notice %></p>
-
+<div class="container">
+  
 <h1>Listing Posts</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Price</th>
@@ -28,6 +29,7 @@
   </tbody>
 </table>
 
+</div>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
