--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @post.price %>
-</p>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+			
+		</div>
+		<div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
+			
+			<p>
+			  <strong>Price:</strong>
+			  <%= @post.price %>
+			</p>			
 
-<p>
-  <strong>Description:</strong>
-  <%= @post.description %>
-</p>
+			<p>
+			  <strong>Description:</strong>
+			  <%= @post.description %>
+			</p>			
 
-<p>
-  <strong>User account:</strong>
-  <%= @post.user_account_id %>
-</p>
+			<p>
+			  <strong>User account:</strong>
+			  <%= @post.user_account_id %>
+			</p>			
 
-<p>
-  <strong>Book:</strong>
-  <%= @post.book_id %>
-</p>
+			<p>
+			  <strong>Book:</strong>
+			  <%= @post.book_id %>
+			</p>	
+		
+		</div>
+	</div>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+	<%= link_to 'Edit', edit_post_path(@post) %> |
+	<%= link_to 'Back', posts_path %>
+</div>
