--- a/app/views/user_accounts/index.html.erb
+++ b/app/views/user_accounts/index.html.erb
@@ -1,28 +1,29 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing User Accounts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Isadmin?</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @user_accounts.each do |user_account| %>
+<div class="container">
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= user_account.email %></td>
-        <td><%= user_account.isAdmin? %></td>
-        <td><%= link_to 'Show', user_account %></td>
-        <td><%= link_to 'Edit', edit_user_account_path(user_account) %></td>
-        <td><%= link_to 'Destroy', user_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Email</th>
+        <th>Isadmin?</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>  
+
+    <tbody>
+      <% @user_accounts.each do |user_account| %>
+        <tr>
+          <td><%= user_account.email %></td>
+          <td><%= user_account.isAdmin? %></td>
+          <td><%= link_to 'Show', user_account %></td>
+          <td><%= link_to 'Edit', edit_user_account_path(user_account) %></td>
+          <td><%= link_to 'Destroy', user_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
