remigrated db for searches

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
             <div class="carousel-caption">
               <h1>Start Searching For Books Now!</h1>
               <form>
-              <a class="btn btn-default" href="/search/retreive" role="button">Search!</a>
+              <a class="btn btn-default" href="/search/new" role="button">Search!</a>
               </form>
             </div>
           </div>
