--- a/app/views/user_accounts/show.html.erb
+++ b/app/views/user_accounts/show.html.erb
@@ -1,15 +1,17 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+		
+	<p>
+	  <strong>Email:</strong>
+	  <%= @user_account.email %>
+	</p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user_account.email %>
-</p>
 
+	<p>
+	  <strong>Isadmin?:</strong>
+	  <%= @user_account.isAdmin? %>
+	</p>
 
-<p>
-  <strong>Isadmin?:</strong>
-  <%= @user_account.isAdmin? %>
-</p>
-
-<%= link_to 'Edit', edit_user_account_path(@user_account) %> |
-<%= link_to 'Back', user_accounts_path %>
+	<%= link_to 'Edit', edit_user_account_path(@user_account) %> |
+	<%= link_to 'Back', user_accounts_path %>
+</div>
