more admin views completed layout and stufffff

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
+        <% if admin %>
+          <li><%= link_to "Admin View", admin_path %></li>          
+        <% end %>
       </ul>
     </div>
   </div>
