--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,6 +120,15 @@ body {
   letter-spacing: -1px;
 }
 
+/* admin view */
+.scrollable{
+  height: 50vh;
+  left: 0;
+  top: 50px;
+  right: 0;  
+  bottom: 0;
+  overflow-y: auto;}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -210,3 +219,4 @@ input:-moz-placeholder {
 input::-webkit-input-placeholder {
   color: #999;
 }
+
