--- a/app/views/user_accounts/admin_view.html.erb
+++ b/app/views/user_accounts/admin_view.html.erb
@@ -1,7 +1,102 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="text-center">Admin View</h1>
-<div class="container">
+  
+  <div class="container">
+
+      <table class="table">
+       <thead>
+         <tr>
+          <th>Average Book Price $</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @average_price.each do |average_price| %>
+          <tr>
+            <td><%= "$ " + average_price["avg"].first(5) %></td> 
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      
+      <table class="table">
+       <thead>
+         <tr>
+          <th>Total Number of Posts Todate</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @number_of_posts.each do |number_of_posts| %>
+          <tr>
+            <td><%= number_of_posts["count"] %></td> 
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+      <table class="table">
+       <thead>
+         <tr>
+          <th>Total Number of Users Todate</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @number_of_users.each do |number_of_users| %>
+          <tr>
+            <td><%= number_of_users["count"] %></td> 
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+     
+     <h2 class="text-center">User History</h2>
+       <div class="scrollable">
+         <table class="table table-condensed">
+           <thead>
+             <tr>
+              <th>Account ID</th>
+              <th>Book Title</th>
+              <th>Book Volume</th>
+              <th>Book Editition</th>
+              <th colspan="3"></th>
+            </tr>
+            </thead>
+              <tbody>
+            <% @user_history.each do |user_history| %>
+              <tr>
+                <td><%= user_history["id"] %></td> 
+                <td><%= user_history["title"] %></td> 
+                <td><%= user_history["volume"] %></td> 
+                <td><%= user_history["edition"] %></td> 
+              </tr>
+              <% end %> 
+            </tbody>
+        </table>
+      </div>
+
+
+    <!-- Nested Aggregation Query-->
+    <% if false %>
+          <table class="table">
+           <thead>
+             <tr>
+              <th>Most Active User</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @most_active_user.each do |most_active_user| %>
+              <tr>
+                <td><%= most_active_user %></td> 
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+    <% end%>  
+
   <div class="row">
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
       <h2 class="text-center">Accounts</h2>
