--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -39,7 +39,7 @@
 			<%= s.text_field :department %>
 		</div>
 		<div class="actions">
-			<%= s.submit "" %>
+			<%= s.submit %>
 		</div>
 	<% end %>
 </div>
