--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,12 @@
 
 /* miscellaneous */
 
+/*.carousel-inner{
+  background-image: url('../images/book.jpg');
+  height: 100px;
+  width: 100px;
+}
+*/
 .debug_dump {
   clear: both;
   float: left;
