adding nested forms creating books

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,16 +1,6 @@
+<% if false %>
+  
 <%= form_for(@post) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div class="field">
     <%= f.label :price %><br>
     <%= f.text_field :price %>
@@ -31,3 +21,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+<% end %>
+
