--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Sign Up!", signup_path %></li>
         <% end %>
         <% if admin %>
           <li><%= link_to "Admin View", admin_path %></li>          
