--- a/app/views/user_accounts/new.html.erb
+++ b/app/views/user_accounts/new.html.erb
@@ -1,5 +1,36 @@
 <div class="container">
 	<h1>New User Account</h1>
-	<%= render 'form' %>	
+	<%= form_for(@user_account) do |f| %>
+	<% if @user_account.errors.any? %>
+	<div id="error_explanation">
+		<h2><%= pluralize(@user_account.errors.count, "error") %> prohibited this user_account from being saved:</h2>
+
+		<ul>
+			<% @user_account.errors.full_messages.each do |message| %>
+			<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+	<% end %>
+
+	<div class="field">
+		<%= f.label :email %><br>
+		<%= f.text_field :email %>
+	</div>
+
+	<div class="field">
+		<%= f.label :password %><br>
+		<%= f.password_field :password %>
+	</div>
+
+	<div class="field">
+		<%= f.label :password_confirmation, "Confirmation" %><br>
+		<%= f.password_field :password_confirmation %>
+	</div>
+
+	<div class="actions btn">
+		<%= f.submit %>
+	</div>
+	<% end %>
 	<%= link_to 'Back', user_accounts_path %>
 </div>
