--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,12 @@
 <div class="container">
-	<h1>Displaying Books</h1>
-	<table class="table table-hover">
-	  <thead>
-	    <tr>
-	      <th>Title</th>
-	      <th>ISBN</th>
-	      <th>Volume</th>
-	      <th>Edition<th>
-	      <th colspan="4"></th>
-	    </tr>
-	  </thead>	
-
-	  <tbody>
-	    <% @books.each do |book| %>
-	    <tr>
-	       	<td><%= book.title %></td>
-	        <td><%= book.ISBN %></td>
-	        <td><%= book.volume %></td>
-	        <td><%= book.edition %></td>
-	        <td><%= link_to 'Show', book %></td>
-	        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-	        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	      </tr>
-	    <% end %>
-	  </tbody>
-	</table>
+	<%= search_form_for @search do |f| %>
+		<fieldset>
+			<legend>Book</legend>
+			<%= f.label :title_or_authors_au_fname_or_authors_au_lname_or_courses_department_cont, "Search" %>
+			<%= f.text_field :title_or_authors_au_fname_or_authors_au_lname_or_courses_department_cont %>
+			<%=f.submit%>
+		</fieldset>		
+	<%end%>
+	<%= paginate @books %>
+	<%= render 'results' %>
 </div>
