--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,23 @@
 <div class="container">
-	<h1 class="text-center">The Book ID for <%= @book.title %> is <%= @book.id %></h1>
-	<h2 class="text-center">Click here to post your book, remember, you need to remember your book id!</h2>
-	<div class="row">
-		<div class="col-sm-4 col-md-4 col-md-offset-4">
-			<p><a class="btn btn-primary center-block" href="/posts/new" role="button">Post &raquo;</a></p> 
-		</div>
-	</div>
+	<h1 class="text-center">Book Information:</h1>
+	<h1>Book ID: <%= @book.id %></h1>
+	<h1>Title: <%= @book.title %></h1>
+	<h1>Edition: <%= @book.edition %></h1>
+	<h1>Volume: <%= @book.volume %></h1>
+	<h1>ISBN: <%= @book.isbn %></h1>
+	<h1>User: <%= @book.post.user_account.email %></h1>
+	<h1>Post ID: <%= @book.post.id %></h1>
+	<h1>Description: <%= @book.post.description %></h1>
+	<h1>Price: <%= @book.post.price %></h1>
+	<h1>Author(s):
+		<% @book.author_books.each do |ab| %>
+			<ul> <%= ab.author.au_lname %>, <%= ab.author.au_fname %> </ul>
+		<%end%>
+	</h1>
+	<h1>Course(s):
+		<% @book.book_courses.each do |bc| %>
+			<ul> <%= bc.course.department %> <%= bc.course.course_number %> </ul>
+		<%end%>
+	</h1>
+
 </div>
