search controller now contains search logic, ability to search over multiple columns with single query, user pages started accidentally

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 	<h1>Edition: <%= @book.edition %></h1>
 	<h1>Volume: <%= @book.volume %></h1>
 	<h1>ISBN: <%= @book.isbn %></h1>
-	<h1>User: <%= @book.post.user_account.email %></h1>
+	<h1>User: <%= @book.user_account.email %></h1>
 	<h1>Post ID: <%= @book.post.id %></h1>
 	<h1>Description: <%= @book.post.description %></h1>
 	<h1>Price: <%= @book.post.price %></h1>
