--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,9 +14,10 @@
         <li ><%= link_to "Home" , root_path%></li>
         <li ><%= link_to "About" , 'static_pages/about'%></li>
         <% if admin %>
-          <li><%= link_to "Admin View", admin_path %></li>          
-        <% end %>
+          <li><%= link_to "Admin View", admin_path %></li>    
+        <% end %>      
         <% if logged_in? %>
+          <li><%= link_to "User Page", current_user_account %></li>     
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
