--- a/app/views/user_accounts/index.html.erb
+++ b/app/views/user_accounts/index.html.erb
@@ -1,39 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h1>INDEX</h1>
 <% if current_user_account %>
-
-<p> Hello <%= current_user_account.email %></p> 
-
-<h1>Posting History</h1>
-<div class="container">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Book</th>
-        <th>Status</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>  
-
-    <tbody>
-      <% current_user_account.books.each do |book| %>
-        <tr>
-          <td><%= book.title %></td>
-          <td><%= book.post.price %></td>
-          <td><%= link_to 'Show', book %></td>
-          <td><%= link_to 'Edit', edit_book_path(book) %></td>
-          <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
-<br>
-
-<%= link_to 'New User account', new_user_account_path %>
-
-<% else %>
 
 <p>You must log in before you can view this page</p>
 
