--- a/app/views/user_accounts/show.html.erb
+++ b/app/views/user_accounts/show.html.erb
@@ -1,20 +1,33 @@
 <p id="notice"><%= notice %></p>
-<div class="container">
+<h3><%= current_user_account.email %></h3> 
 
-	<h3 class="text-center">
-		Welcome
-		<%= @user_account.email %>!
-	</h2>
-	<div class="row">
-		<div class="col-sm-3 col-md-3 col-md-offset-3">
-			<p class="text-center">Want to post a book?</p>
-			<p><a class="btn btn-primary btn-block" href="/posts/new" role="button">Post &raquo;</a></p> 
-		</div>
-		<div class="col-sm-3 col-md-3">
-			<p class="text-center">Want to browse our books?</p>
-			<p><a class="btn btn-primary btn-block" href="/posts" role="button">Browse Posts &raquo;</a></p>
-		</div>
-	</div>
-	<%= link_to 'Edit', edit_user_account_path(@user_account) %> |
-	<%= link_to 'Back', user_accounts_path %>
+<h1>Posting History</h1>
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Book</th>
+        <th>Status</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>  
+
+    <tbody>
+      <% current_user_account.books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td> Posted </td>
+          <td><%= link_to 'Show', book %></td>
+          <td><%= link_to 'Edit', edit_book_path(book) %></td>
+          <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<br>
+
+<%= link_to 'Delete my account', current_user_account, method: :delete, data: { confirm: 'Are you sure?' }  %>
+
 </div>
