--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,16 +11,18 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li ><%= link_to "Home" , root_path%></li>
-        <li ><%= link_to "About" , 'static_pages/about'%></li>
+        <li ><%= link_to "View Posts" , root_path%></li>
+        <li ><%= link_to "New Post" , new_book_path%></li>
         <% if admin %>
           <li><%= link_to "Admin View", admin_path %></li>    
-        <% end %>      
+        <% end %>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          <li><%= link_to "User Page", current_user_account %></li>     
+          <li><%= link_to current_user_account.email, current_user_account %></li>     
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
         <% else %>
-          <li><%= link_to "Log in", login_path %></li>
+          <li ><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign Up!", signup_path %></li>
         <% end %>
       </ul>
