--- a/app/views/user_accounts/show.html.erb
+++ b/app/views/user_accounts/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <h3><%= current_user_account.email %></h3> 
 
 <h1>Posting History</h1>
@@ -8,18 +7,22 @@
       <tr>
         <th>Book</th>
         <th>Status</th>
+        <th>Date Posted</th>
         <th colspan="3"></th>
       </tr>
     </thead>  
 
     <tbody>
+      <% if current_user_account.books.empty? %>
+        <tr> <td> No books posted </td> </tr>
+      <% end %>
       <% current_user_account.books.each do |book| %>
         <tr>
-          <td><%= book.title %></td>
-          <td> Posted </td>
-          <td><%= link_to 'Show', book %></td>
+          <td><%= link_to book.title, book %></td>
+          <td> Posted/Expired </td>
+          <td> <%= Time.at(book.created_at).to_formatted_s(:long) %> </td>
           <td><%= link_to 'Edit', edit_book_path(book) %></td>
-          <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Destroy', book, id: current_user_account.id, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
