--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,65 +1,72 @@
-<h1 class="text-center">Create Your Book</h1>
 <div class="container">
+	<h1 class="text-center">Create Your Book</h1>
 	<%= form_for @book do |f| %>
-		<div class="field">
-			<%= f.label :title %>
-			<%= f.text_field :title %>
-
-			<%= f.label :volume %>
-			<%= f.text_field :volume %>
-
-			<%= f.label :edition %>
-			<%= f.text_field :edition %>
-
-			<%= f.hidden_field :user_account_id, :value => current_user_account.id %>
+	<div class="form-inline">
+		<div class="form-group">
+			<%= f.text_field :title, placeholder: 'Title', class: "form-control" %>
 		</div>
+		<div class="form-group">
+			<%= f.text_field :volume, placeholder: 'Volume', class: "form-control"  %>
+		</div>
+		<div class="form-group">
+			<%= f.text_field :edition, placeholder: 'Edition', class: "form-control"  %>
+		</div>
+	</div>
 
-		<%= f.fields_for :post do |p| %>
-			<div class="field">
-				<%= p.label :price %>
-				<%= p.text_field :price %>
-
-				<%= p.label :description %>
-				<%= p.text_field :description %>
-			</div>
-
-		<% end %>
+		<%= f.hidden_field :user_account_id, :value => current_user_account.id %>
 
 		<%= f.fields_for :author_books do |ab| %>
+		<div class="form-inline">
 			<%= ab.fields_for :author do |a| %>
-				<div class="field">
-					<%= a.label :au_fname %>
-					<%= a.text_field :au_fname %>
+				<div class="form-group">
+					<%= a.text_field :au_fname, placeholder: 'Author First Name' , class: "form-control"  %>
+				</div>
 
-					<%= a.label :au_lname %>
-					<%= a.text_field :au_lname %>
+				<div class="form-group">
+					<%= a.text_field :au_lname, placeholder: 'Author Last Name', class: "form-control"  %>
+				</div>
 
+				<div class="form-group">
 					<%= a.check_box :_destroy %>
-				    <%= a.label :_destroy, 'delete' %>
+				    <%= a.label :_destroy, 'delete'  %>
 				</div>
 			<% end %>
-		<% end %>
-		<%= f.submit 'Add author', :name => "add_author" %>
-		<%= f.fields_for :book_courses do |bc| %>
-			<%= bc.fields_for :course do |c| %>
-				<div class="field">
-					<%= c.label :department %>
-					<%= c.text_field :department %>
-
-					<%= c.label :course_number %>
-					<%= c.text_field :course_number %>
-
-					<%= c.check_box :_destroy %>
-				    <%= c.label :_destroy, 'delete' %>
-				</div>
-			<% end %>
-		<% end %>
-		<%= f.submit 'Add course', :name => "add_course" %> <br>
-		<%= f.submit 'Remove selected', :name => "remove_selected" %>
-
-		<div class="actions">
-			<%= f.submit %>
 		</div>
+		<% end %>
+		<%= f.submit 'Add author', :name => "add_author", class: "btn btn-default" %>
+
+		<%= f.fields_for :book_courses do |bc| %>
+		<div class="form-inline">
+			<%= bc.fields_for :course do |c| %>
+				<div class="form-group">
+					<%= c.text_field :department, placeholder: 'Department', class: "form-control"  %>
+				</div>
+				<div class="form-group">
+					<%= c.text_field :course_number, placeholder: 'Course #', class: "form-control"  %>
+				</div>
+				<div class="form-group">
+					<%= c.check_box :_destroy %>
+				    <%= c.label :_destroy, 'delete'  %>
+				</div>
+			<% end %>
+		</div>
+		<% end %>
+		<%= f.submit 'Add course', :name => "add_course", class: "btn btn-default" %> <br>
+
+		<%= f.fields_for :post do |p| %>
+		<div class="form-inline">
+			<div class="input-group">
+				 <div class="input-group-addon">$</div>
+				<%= p.text_field :price, placeholder: 'Price', class: "form-control"  %>
+			</div>
+			<div class="form-group">
+				<%= p.text_area :description, placeholder: 'Description', rows: "3", class: "form-control"  %>
+			</div>
+		</div>
+		<% end %>
+
+		<%= f.submit 'Remove selected', :name => "remove_selected", class: "btn btn-default" %>
+		<%= f.submit 'Create', class: "btn btn-default" %>
 	<% end %>
 </div>
 
