--- a/app/views/user_accounts/new.html.erb
+++ b/app/views/user_accounts/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-	<h1>New User Account</h1>
+<div class="container col-xs-6 col-sm-6 col-md-6 col-lg-6 col-md-offset-3">
+	<h1>New User</h1>
 	<%= form_for(@user_account) do |f| %>
 	<% if @user_account.errors.any? %>
 	<div id="error_explanation">
@@ -13,24 +13,21 @@
 	</div>
 	<% end %>
 
-	<div class="field">
+	<div class="form-group">
 		<%= f.label :email %><br>
-		<%= f.text_field :email %>
+		<%= f.text_field :email, class: "form-control" %>
 	</div>
 
-	<div class="field">
+	<div class="form-group">
 		<%= f.label :password %><br>
-		<%= f.password_field :password %>
+		<%= f.password_field :password, class: "form-control" %>
 	</div>
 
-	<div class="field">
+	<div class="form-group">
 		<%= f.label :password_confirmation, "Confirmation" %><br>
-		<%= f.password_field :password_confirmation %>
+		<%= f.password_field :password_confirmation, class: "form-control" %>
 	</div>
 
-	<div class="actions btn">
-		<%= f.submit %>
-	</div>
+	<%= f.submit "Create", class: "btn btn-primary"  %>
 	<% end %>
-	<%= link_to 'Back', user_accounts_path %>
 </div>
