--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,12 +11,13 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li ><%= link_to "Home" , root_path%></li>
+        <li ><%= link_to "Browse Books" , root_path%></li>
         <li ><%= link_to "About" , 'static_pages/about'%></li>
         <% if admin %>
           <li><%= link_to "Admin View", admin_path %></li>          
         <% end %>
         <% if logged_in? %>
+          <li><%= link_to "Dashboard", dashboard_path%></li>
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
