dynamically edit form, validations and error messages when creating book

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,72 +1,2 @@
-<div class="container">
-	<h1 class="text-center">Create Your Book</h1>
-	<%= form_for @book do |f| %>
-	<div class="form-inline">
-		<div class="form-group">
-			<%= f.text_field :title, placeholder: 'Title', class: "form-control" %>
-		</div>
-		<div class="form-group">
-			<%= f.text_field :volume, placeholder: 'Volume', class: "form-control"  %>
-		</div>
-		<div class="form-group">
-			<%= f.text_field :edition, placeholder: 'Edition', class: "form-control"  %>
-		</div>
-	</div>
-
-		<%= f.hidden_field :user_account_id, :value => current_user_account.id %>
-
-		<%= f.fields_for :author_books do |ab| %>
-		<div class="form-inline">
-			<%= ab.fields_for :author do |a| %>
-				<div class="form-group">
-					<%= a.text_field :au_fname, placeholder: 'Author First Name' , class: "form-control"  %>
-				</div>
-
-				<div class="form-group">
-					<%= a.text_field :au_lname, placeholder: 'Author Last Name', class: "form-control"  %>
-				</div>
-
-				<div class="form-group">
-					<%= a.check_box :_destroy %>
-				    <%= a.label :_destroy, 'delete'  %>
-				</div>
-			<% end %>
-		</div>
-		<% end %>
-		<%= f.submit 'Add author', :name => "add_author", class: "btn btn-default" %>
-
-		<%= f.fields_for :book_courses do |bc| %>
-		<div class="form-inline">
-			<%= bc.fields_for :course do |c| %>
-				<div class="form-group">
-					<%= c.text_field :department, placeholder: 'Department', class: "form-control"  %>
-				</div>
-				<div class="form-group">
-					<%= c.text_field :course_number, placeholder: 'Course #', class: "form-control"  %>
-				</div>
-				<div class="form-group">
-					<%= c.check_box :_destroy %>
-				    <%= c.label :_destroy, 'delete'  %>
-				</div>
-			<% end %>
-		</div>
-		<% end %>
-		<%= f.submit 'Add course', :name => "add_course", class: "btn btn-default" %> <br>
-
-		<%= f.fields_for :post do |p| %>
-		<div class="form-inline">
-			<div class="input-group">
-				 <div class="input-group-addon">$</div>
-				<%= p.text_field :price, placeholder: 'Price', class: "form-control"  %>
-			</div>
-			<div class="form-group">
-				<%= p.text_area :description, placeholder: 'Description', rows: "3", class: "form-control"  %>
-			</div>
-		</div>
-		<% end %>
-
-		<%= f.submit 'Remove selected', :name => "remove_selected", class: "btn btn-default" %>
-		<%= f.submit 'Create', class: "btn btn-default" %>
-	<% end %>
-</div>
-
+<h1 class="text-center">Create Your Book</h1>
+<%= render 'form' %>
