--- a/app/views/user_accounts/new.html.erb
+++ b/app/views/user_accounts/new.html.erb
@@ -1,33 +1,3 @@
-<div class="container col-xs-6 col-sm-6 col-md-6 col-lg-6 col-md-offset-3">
-	<h1>New User</h1>
-	<%= form_for(@user_account) do |f| %>
-	<% if @user_account.errors.any? %>
-	<div id="error_explanation">
-		<h2><%= pluralize(@user_account.errors.count, "error") %> prohibited this user_account from being saved:</h2>
+<h1>New User Account</h1>
 
-		<ul>
-			<% @user_account.errors.full_messages.each do |message| %>
-			<li><%= message %></li>
-			<% end %>
-		</ul>
-	</div>
-	<% end %>
-
-	<div class="form-group">
-		<%= f.label :email %><br>
-		<%= f.text_field :email, class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		<%= f.label :password %><br>
-		<%= f.password_field :password, class: "form-control" %>
-	</div>
-
-	<div class="form-group">
-		<%= f.label :password_confirmation, "Confirmation" %><br>
-		<%= f.password_field :password_confirmation, class: "form-control" %>
-	</div>
-
-	<%= f.submit "Create", class: "btn btn-primary"  %>
-	<% end %>
-</div>
+<%= render 'form' %>
